--- a/public/style.css
+++ b/public/style.css
@@ -6,7 +6,7 @@
 
 body {
   font-family: "Poppins", sans-serif;
-  background-color: #ccf656;
+  background-color: #e5e8ef;
 }
 main {
   display: flex;
@@ -18,15 +18,16 @@ main {
   margin-top: 20px;
   margin-bottom: 30px;
   height: 40px;
-  color: grey;
+  color: black;
   transition: all 0.5s;
   position: relative;
   line-height: 50px;
   height: 50px;
   text-align: center;
   cursor: pointer;
-  background-color: #ccf656;
+  background-color: #d4d4d4;
   border: none;
+  border-radius: 20px;
 }
 
 #button::before {
@@ -37,12 +38,14 @@ main {
   width: 100%;
   height: 100%;
   z-index: 1;
-  background-color: rgba(255, 255, 255, 0.1);
+  background-color: #4ac77667;
   transition: all 0.3s;
+  border-radius: 20px;
 }
 #button:hover::before {
   opacity: 0;
   transform: scale(0.5, 0.5);
+  border-radius: 20px;
 }
 #button:after {
   content: "";
@@ -54,12 +57,14 @@ main {
   z-index: 1;
   opacity: 0;
   transition: all 0.3s;
-  border: 3px solid rgba(255, 255, 255, 0.5);
+  border: 3px solid #4ac77667;
   transform: scale(1.2, 1.2);
+  border-radius: 20px;
 }
 #button:hover::after {
   opacity: 1;
   transform: scale(1, 1);
+  background-color: #14d65867;
 }
 
 input {
