--- a/public/style.css
+++ b/public/style.css
@@ -13,6 +13,7 @@ main {
   flex-direction: column;
 }
 #button {
+  line-height: 15px;
   width: 300px;
   margin: 0 auto;
   margin-top: 20px;
@@ -134,7 +135,7 @@ h1 {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  width: 40%;
+  width: 50%;
   height: 60%;
   overflow-y: scroll;
   background-color: rgba(0, 0, 0, 0.5);
