--- a/public/style.css
+++ b/public/style.css
@@ -208,3 +208,27 @@ iframe {
   transform: rotate(45deg);
   background-color: rgba(255, 255, 255, 0);
 }
+
+.tracking-in-expand {
+  animation: tracking-in-expand 0.7s cubic-bezier(0.455, 0.03, 0.515, 0.955)
+    both;
+}
+
+@keyframes tracking-in-expand {
+  0% {
+    letter-spacing: -0.5em;
+    opacity: 0;
+  }
+  40% {
+    opacity: 0.6;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+#errorMessage {
+  margin: 0 auto;
+  display: none;
+  color: orange;
+}
