--- a/public/style.css
+++ b/public/style.css
@@ -1,3 +1,5 @@
+/* RESET styles */
+
 * {
   margin: 0;
   padding: 0;
@@ -8,64 +10,68 @@ body {
   font-family: "Poppins", sans-serif;
   background-color: #e5e8ef;
 }
+
+/* back to top button */
+
+#backToTop {
+  position: fixed;
+  bottom: 50px;
+  left: -8%;
+  transform: rotate(-90deg);
+  z-index: 9999;
+  opacity: 0;
+  transition: opacity 0.3s ease;
+  text-decoration: none;
+  color: white;
+  background-color: rgb(243, 155, 53);
+  padding: 0.1em;
+  font-size: 0.9em;
+}
+
+#backToTop:active {
+  color: inherit;
+}
+
+#backToTop.show {
+  opacity: 1;
+}
+
+/* Main content and searchButton style */
+
 main {
   display: flex;
   flex-direction: column;
 }
-#button {
+
+
+#searchButton {
   line-height: 15px;
   width: 300px;
   margin: 0 auto;
-  margin-top: 20px;
+  margin-top: 4em;
   margin-bottom: 30px;
   height: 40px;
-  color: black;
+  color: white;
   transition: all 0.5s;
   position: relative;
   line-height: 50px;
   height: 50px;
   text-align: center;
   cursor: pointer;
-  background-color: #d4d4d4;
+  background-color: rgb(243, 155, 53);
   border: none;
   border-radius: 20px;
+  font-weight: bolder;
 }
 
-#button::before {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  z-index: 1;
-  background-color: #4ac77667;
-  transition: all 0.3s;
-  border-radius: 20px;
-}
-#button:hover::before {
-  opacity: 0;
-  transform: scale(0.5, 0.5);
-  border-radius: 20px;
-}
-#button:after {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  z-index: 1;
-  opacity: 0;
-  transition: all 0.3s;
-  border: 3px solid #4ac77667;
-  transform: scale(1.2, 1.2);
-  border-radius: 20px;
-}
-#button:hover::after {
-  opacity: 1;
-  transform: scale(1, 1);
-  background-color: #14d65867;
+#searchButton:hover {
+  background-color: #d4d4d4;
+  color: transparent;
+  background-image: url("../assests/search.png");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 2em 2em;
+  box-shadow: 0px 2px 10px 2px #72706f58;
 }
 
 input {
@@ -75,7 +81,8 @@ input {
   border-radius: 10px;
 }
 
-input:focus {
+input:focus,
+input:focus-within {
   font-family: "Poppins", sans-serif;
 }
 
@@ -151,7 +158,7 @@ h1 {
 }
 
 #trackListContainer::-webkit-scrollbar-thumb {
-  background-color: orange;
+  background-color: rgb(243, 155, 53);
   border-radius: 3px;
 }
 
@@ -198,7 +205,7 @@ iframe {
   background-color: rgba(159, 161, 27, 0.1);
 }
 .closeButton:hover {
-  background-color: orange;
+  background-color: rgb(243, 155, 53);
 }
 .closeButton:hover::before {
   transform: rotate(-45deg);
@@ -230,5 +237,141 @@ iframe {
 #errorMessage {
   margin: 0 auto;
   display: none;
-  color: orange;
+  color: rgba(243, 154, 53, 0.748);
+}
+
+/* MOBILE DESIGN */
+
+@media all and (max-width: 480px) {
+  h1 {
+    width: 80%;
+    font-size: 2em;
+  }
+
+  input {
+    min-width: 80%;
+    height: 4em;
+  }
+
+  #searchButton {
+    width: 80%;
+  }
+
+  #errorMessage {
+    font-size: 1em;
+  }
+
+  body {
+    transition: background-color 0.5s;
+  }
+
+  body.scroll-effect {
+    background-color: #9cb9ff;
+  }
+
+  main {
+    flex-direction: column;
+  }
+
+  .albums {
+    width: 80%;
+  }
+
+  .albumImage {
+    filter: none;
+  }
+
+  #trackListContainer {
+    top: 40%;
+    padding: 10px;
+    width: 80%;
+  }
+
+  .closeButton {
+    background-color: rgb(243, 155, 53);
+  }
+
+  #searchButton,
+  #searchButton:hover {
+    background-color: rgb(243, 155, 53);
+    color: transparent;
+    background-image: url("../assests/search.png");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: 2em 2em;
+  }
+}
+
+/* TABLET DESIGN */
+
+@media all and (min-width: 481px) and (max-width: 768px) {
+  h1 {
+    width: 80%;
+    font-size: 4em;
+  }
+
+  input {
+    min-width: 80%;
+    height: 4em;
+    font-size: 1em;
+  }
+
+  #searchButton {
+    width: 80%;
+    height: 5em;
+  }
+
+  #errorMessage {
+    font-size: 2em;
+  }
+
+  body {
+    transition: background-color 0.5s;
+  }
+
+  body.scroll-effect {
+    background-color: #9cb9ff;
+  }
+
+  main {
+    flex-direction: column;
+  }
+
+  .albums {
+    width: 40%;
+  }
+
+  .albumImage {
+    filter: none;
+  }
+
+  #trackListContainer {
+    top: 50%;
+    padding: 15px;
+    width: 80%;
+  }
+
+  .closeButton {
+    background-color: rgb(243, 155, 53);
+  }
+
+  #searchButton,
+  #searchButton:hover {
+    background-color: rgb(243, 155, 53);
+    color: transparent;
+    background-image: url("../assests/search.png");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: 2em 2em;
+  }
+
+  body.scroll-effect {
+    background-color: #bcf6c5;
+  }
+
+  #backToTop {
+    bottom: 50px;
+    left: -4%;
+    font-size: 0.9em;
+  }
 }
