--- a/public/style.css
+++ b/public/style.css
@@ -11,7 +11,7 @@ body {
   background-color: #e5e8ef;
 }
 
-/* back to top button */
+/* back to top button for mobile and tablet */
 
 #backToTop {
   position: fixed;
@@ -46,6 +46,7 @@ main {
 #searchButton {
   line-height: 15px;
   width: 300px;
+  height: 50px;
   margin: 0 auto;
   margin-top: 4em;
   margin-bottom: 30px;
@@ -54,7 +55,6 @@ main {
   transition: all 0.5s;
   position: relative;
   line-height: 50px;
-  height: 50px;
   text-align: center;
   cursor: pointer;
   background-color: rgb(243, 155, 53);
@@ -136,6 +136,7 @@ h1 {
   display: none;
 }
 
+/* Track list */
 #trackListContainer {
   position: absolute;
   top: 50%;
@@ -160,6 +161,8 @@ h1 {
   background-color: rgb(243, 155, 53);
   border-radius: 3px;
 }
+
+/* track list player */
 
 iframe {
   width: 100%;
